添加scala开发相关